XS size hero for phone done, minor fix on small size hero

--- a/css/casestudy.css
+++ b/css/casestudy.css
@@ -267,6 +267,14 @@ p  {font-size:20px; line-height:160%; color:#333; font-weight:300; margin-bottom
 		text-align:center;
 		margin-left: calc(( 100% / 2 ) - 145px ); 
 	}
+	
+	.zhero-phone-example {margin-bottom:-30px;}
+	.zhero-phone-example .zhero-video-container {height:auto;}
+	.zhero-phone-example .zhero-video-container {background-color:#666;position:absolute; overflow:hidden; top:0; left:0; bottom:0; right:0;  }
+	.zhero-phone-example .zhero-video-container video {position:absolute; top:0; width:auto; height:100%; left:-50%;  }
+	.zhero-phone-example .zhero-textbox {margin-top: 20px;}
+
+
 	#main {margin-top:	15px;}
 	
 }
@@ -289,7 +297,7 @@ p  {font-size:20px; line-height:160%; color:#333; font-weight:300; margin-bottom
 	.zhero-phone-example 	.zhero-textbox {margin-top:110px;}
 	.zhero-phone-example 	.zhero-device-image { margin-top:30px; margin-left:-70px; position:relative; left:80px;}
 	.zhero-phone-example 	.zhero-video-container {position:absolute; overflow:hidden;top:0; left:0; width:100%; height: 530px;}
-	.zhero-phone-example 	.zhero-video-container video {top:auto; width:auto; position:absolute; top:auto; height:530px;}
+	.zhero-phone-example 	.zhero-video-container video {top:auto; width:auto; position:absolute; top:auto; height:105%;}
 
 	.zhero-scrollhint {padding: 5px 10px; position:absolute; bottom: -45px;}
 	.zhero-scrollhint .glyphicon {font-size:20px; position:relative; left:3px; top:4px;}
